# MinOS-dll

./: .gitignore  CMakeLists.txt  LICENSE  README.md  requirements-dev.txt
cmake/: CMakeLists.in  Copyright.in  Doxyfile.in  FindCython.cmake  FindGCC.cmake  FindHMACLIC.cmake  FindIPOPT.cmake  FindKNITRO.cmake  FindMINOS.cmake  FindSNOPT.cmake  FindTCC.cmake  FindWORHP.cmake  HeaderGenerator.cmake  README.unix.in  README.win.in  buildOCP.in  minosMex.in  minosPy.in
cmake/doxygen-theme/: header.html
examples/: CMakeLists.txt
examples/brachistochrone/: CMakeLists.txt  main.cpp
examples/brachistochrone_auxdata/: CMakeLists.txt  generate.py  main.cpp
examples/brachistochrone_c/: CMakeLists.txt  generate.py  main.c
examples/brysonDenham/: CMakeLists.txt  generate.py  main.cpp
examples/directCollocation/: CMakeLists.txt  generate.py  main.cpp
examples/goddardRocket/: CMakeLists.txt  generate.py  main.cpp
examples/hyperSensitive/: CMakeLists.txt  generate.py  main.cpp
include/: ipoptsolver.h  knitrosolver.h  macros.h  minos.h  minos_header.h  minosc.h  snoptsolver.h  worhpsolver.h
interfaces/cli/: CMakeLists.txt  minos_cli.cpp
interfaces/cli/examples/: generate.py  problem.lua  script.lua
interfaces/matlab/: CMakeLists.txt  buildOCP.m  buildOCP_help.m  minosMex.cpp
interfaces/matlab/examples/: brachistochroneAuxdata.m  brachistochroneBasic.m  brachistochroneDual.m  brachistochroneDualIndirect.m  brakingWheel.m  brysonDenham.m  brysonPendulum.m  directCollocation.m  doubleIntegrator.m  fullCollocation.m  fullerProblem.m  goddardRocket.m  hyperSensitive.m  laneChange.m  raceCar.m  spaceStation.m
interfaces/python/: CMakeLists.txt  minos.pyi  minosPy.pxd  minosPy.pyi  minosPy.pyx  requirements.txt
interfaces/python/examples/: brachistochrone.py  brachistochrone_auxdata.py  brysonDenham.py  directCollocation.py  goddardRocket.py  hyperSensitive.py
src/: ipoptsolver.cpp  knitrosolver.cpp  minos_base.cpp  minos_cinterface.cpp  minos_cli.cpp  minos_dlopen.cpp  minos_nlp.cpp  minos_print.cpp  minos_utils.cpp  snoptsolver.cpp  worhpsolver.cpp
